Add to the Java encoder/converter the ability to write the raw stream data… (#533)
… and their JSON representation as separate files to assist with
developing and troubleshooting decoders

---------

Co-authored-by: Yuri Astrakhan <yuriastrakhan@gmail.com>